--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,7 +2,7 @@
     <head>
         <title>Article One | Sandip Bhogulkar
         </title>
-        
+        <meta name='viewport' content='width=device-width,initial-scale=1 ' />
         </head>
         <body>
             <div>
