--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,13 +3,9 @@
         <title>Article One | Sandip Bhogulkar
         </title>
         <meta name='viewport' content='width=device-width,initial-scale=1 ' />
+         <link href="/ui/style.css" rel="stylesheet" />
         <style>
-            .container{
-                max-width:800px;
-                margin:0 auto;
-                color:grey;
-                font-family: sans-serif;
-            }
+            
         </style>
         </head>
         <body>
