[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,8 +8,19 @@
             <img id='madi' src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am Sandip, and this is my first app.
+        <h3>Personal</h3>
+        <div >
+            Hi! I am Sandip Bhogulkar.
+        </div>
+        <hr/>
+        <h3>Professional</h3>
+        <div >
+            Hi! I am not working yet.
+        </div>
+        <div class='footer'>
+            This button <button id=counter> Click me! </button> has been clicked  <span id='count' >0</span>times
+            
+            
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
