[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://lh3.googleusercontent.com/-tcjNpZ8Ae6c/V4dG-EEvNeI/AAAAAAAAAGg/y_HrLRGCqKE6xTIDJ0jzyuxkXVFph7qGQCEwYBhgL/w140-h140-p/12107736_650942328341516_6094642224229778963_n.jpg" class="img-medium"/>
         </div>
         <br>
         <h3>Personal</h3>
